tests/NormalTests/paczka1/fuzzy1/15872646.err
Error in line 6: JrgS7 S806 96,7
Error in line 15: oNvb S806 20,14
Error in line 10: JrgS7 A854 93,6
Error in line 20: 2mGdinT A854 79,7
Error in line 29: 4bQZJD9 S871 81,0
Error in line 36: TaFkkCR0hU S871 43,6
Error in line 32: 4bQZJD9 S806 46,7
